--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-background: #4682B4;
+background: #BBBBBB;
 padding: 20px 0;
 }
 
@@ -29,6 +29,7 @@ text-decoration: none;
 }
 
 nav a:hover {
+
 color: #C78C19;
 text-decoration: underline;
 }
@@ -60,6 +61,7 @@ border-color: #088C19;
 }
 
 .produtos li:hover h2 {
+
 font-size: 34px;
 }
 
@@ -90,67 +92,25 @@ font-size: 13px;
 margin: 20px 0 0;
 }
 
-/* Página de contato */
-.contato {
+main {
+
 width: 940px;
-margin: 40px auto;
+margin: 0 auto;
 }
 
-.contato label, .input-group legend {
-display: block;
-margin: 0 0 5px;
+form {
+margin: 40px 0;
+}
+
+form label {
+display:block;
 font-size: 20px;
+margin: 0 0 10px;
 }
 
-.campo-padrao, textarea {
+form input {
 display: block;
-margin: 0 0 30px;
-padding: 10px 20px;
+margin: 0 0 20px;
+padding: 10px 25px;
 width: 50%;
-border: 1px solid #aaa;
-}
-
-.input-group {
-margin: 0 0 20px;
-}
-
-.newsletter {
-margin: 0 0 20px;
-}
-
-.botao {
-margin: 20px 0 0;
-width: 30%;
-padding: 10px 20px;
-font-size: 24px;
-display: inline-block;
-background: orange;
-color: white;
-border: none;
-border-radius: 5px;
-transition: 1s;
-}
-
-.botao:hover {
-cursor: pointer;
-transform: scale(1.2);
-}
-
-.funcionamento {
-width: 940px;
-margin: 0 auto 40px;
-}
-
-table {
-margin: 10px 0 0;
-}
-
-th {
-background: #777777;
-color: #FFFFFF;
-}
-
-td, th {
-border: 1px solid #000000;
-padding: 5px 20px;
 }
