--- a/style.css
+++ b/style.css
@@ -114,3 +114,17 @@ margin: 0 0 20px;
 padding: 10px 25px;
 width: 50%;
 }
+
+.enviar{
+  width: 40%;
+  padding: 15px 0;
+  background: orange;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  transitions: 1s all;
+  cursor: pointer;
+}
+  
